--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
 								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
 								<h2 class="minor">Awards</h2>
-								<p>Undergraduate Research Experience Residential Mentor Award (2017)<br />
+								<p><b>Undergraduate Research Experience Residential Mentor Award (2017)</b><br />
 								<i>conferred by the CN Yang Scholars Program, Nanyang Technological University</i></p>
-								<p>Nanyang Scholarship under the CN Yang Scholars Program (2016)<br />
+								<p><b>Nanyang Scholarship under the CN Yang Scholars Program (2016)</b><br />
 								<i>conferred by Nanyang Technological University</i></p>
-								<p>Full-time National Servicemen of the Year Award (2016)<br />
+								<p><b>Full-time National Servicemen of the Year Award (2016)</b><br />
 								<i>conferred by the Singapore Armed Forces</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
 								<p>Geophysical station maintenance | Akutan/Unalaska/Unimak islands, AK, USA <br />
