--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 								<p><b>Full-time National Servicemen of the Year Award (2016)</b><br />
 								<i>conferred by the Singapore Armed Forces</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
-								<p>Geophysical station maintenance | Akutan/Unalaska/Unimak islands, AK, USA <br />
+								<p><b>Geophysical station maintenance | Akutan/Unalaska/Unimak islands, AK, USA </b><br />
 								Assistant | Jun 2021 - Jul 2021</p>
-								<p>Geological Mapping | Cerro Gordo/Mono Lake/Panum Crater, CA, USA <br />
+								<p><b>Geological Mapping | Cerro Gordo/Mono Lake/Panum Crater, CA, USA </b><br />
 								Student | May 2019 - Jun 2019</p>
 							</article>
 
