--- a/index.html
+++ b/index.html
@@ -108,41 +108,18 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
-								<p>Welcome to my website! I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles. (To be updated)</p>
-								<p>I am primarily motivated by... my motivations. (To be updated)</p>
-								<p>In the long run, I hope to... educate populations at risk about volcanic hazards and inspire future volcanologists. (To be updated)</p>
-								<p>Outside of work, I live in a log cabin. (To be updated)</p>
+								<p>Welcome to my website! My name is Darren Tan (Chinese: 陈培堃) and I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles to try to uncover how seismic and acoustic signals tie in with volcanic unrest. I am particularly interested in using rigorous algorithms (e.g. machine learning) to mine the continuous data for previously-undetected signals, in order to construct and present a complete geophysical picture of any eruption-of-interest.</p>
+								<p>As I was born and raised in Singapore, I have spent most of my life in a place with no volcanoes and close to no earthquakes. As many might wonder — how did I get to pursuing a PhD in the geosciences in the first place? Well, I was first drawn in by the colorful geography textbooks in middle school, which contained numerous exotic pictures of erupting volcanoes and large faults. Of course, those pictures were accompanied by alarming statistics on death rates and frightening pictures of infrastructure devastation. As I learnt more about natural hazards, I was pulled in further by the awesome scale and mysterious unknowns of our physical world. The geosciences were gaining traction and diversity in the 21st century, and I wanted to be part of that wave. </p>
+								<p>In the long run, I hope to educate populations at risk about volcanic hazards and inspire future volcanologists to be daring thinkers. I hope to contribute to the volcano sciences where I can better inform people of the associated hazards and in turn, provide them with the same peace of mind I grew up with in geologically-inactive Singapore.</p>
+								<p>Outside of work, I am an avid hip-hop dancer for 9 years and running. I enjoy listening to fresh tracks and exploring movement to different rhythms and beats. I’ve taught dance and performed shows back home in Singapore, and I am trying to do the same here in Fairbanks. At the moment I’m still too shy to share any videos on this platform, though. But I promise I’m not too shabby. Please feel free to call me out and maybe one day we can have a dance battle on a volcano of your choice.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								<p><b>Email:</b> ptan[a]alaska.edu</p>
+								<p><b>Github:</b> <a href="https://github.com/darren-tpk">https://github.com/darren-tpk</a></p>
+							</article>
 							</article>
 
 						<!-- Elements -->
