--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p><b>Email:</b> ptan[a]alaska.edu</p>
-								<p><b>Github:</b> <a href="https://github.com/darren-tpk">https://github.com/darren-tpk</a></p>
+								<p><b>Email:</b> ptan[a]alaska.edu<br />
+								<b>Github:</b> <a href="https://github.com/darren-tpk">https://github.com/darren-tpk</a></p>
 							</article>
 							</article>
 
