--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
 								<h2 class="minor">Graduate Research Projects</h2>
-								<p><b>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools</b> | Advised by David Fee, in collaboration with PREEVENTS collaborators Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona </p>
+								<p><b>Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning</b> | Advised by David Fee, in collaboration with Társilo Girona, Matt Haney, Alex Witsil, Aaron Wech </p>
+								<p><b>Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools</b> | Advised by David Fee, in collaboration with Alicia Hotovec-Ellis, Jeremy Pesicek, Matt Haney, John Power, Társilo Girona </p>
 								<h2 class="minor">Undergraduate Research Projects</h2>
 								<p><b>Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide</b> | Advised by Jeremy Pesicek and Jay Wellik at Cascades Volcano Observatory, USGS | Jun 2019 - Dec 2019</p>
 								<p><b>Balloon-glider drone hybrid for volcano surveillance</b> | Advised by Benoit Taisne at Earth Observatory of Singapore | May 2018 - Aug 2018</p>
