--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
 								<i>conferred by Nanyang Technological University</i></p>
 								<p><b>Full-time National Servicemen of the Year Award (2016)</b><br />
 								<i>conferred by the Singapore Armed Forces</i></p>
+								<h2 class="minor">Additional Appointments</h2>
+								<p><b>Graduate Student Representative</b> | UAF International Collaboration & Enrollment Task Force (ICE)<br />
+								<i>Jan 2023 - current</i></p>
+								<p><b>President</b> | Geophysical Institute Graduate Student Association<br />
+								<i>May 2022 - current</i></p>
+								<p><b>Committee Member</b> | Geophysical Institute Graduate Student Association<br />
+								<i>May 2021 - May 2022</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
 								<p><b>International Volcanological Field School | Katmai National Park, AK, USA </b><br />
 								Assistant | May 2022 - Jun 2022</p>
