--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 								<p><b>Alaska Geological Society Scholarship (2022)</b><br />
 								<i>conferred by the Alaska Geological Society</i></p>
 								<p><b>Oustanding Student Presentation Award (2021)</b><br />
-								<i>conferred by the 2021 AGU Fall Meeting</i></p>
-								<i>Volcanology, Geochemistry and Petrology Section)</i></p>
+								<i>conferred by the 2021 AGU Fall Meeting (Volcanology, Geochemistry and Petrology Section)</i></p>
 								<p><b>Undergraduate Research Experience Residential Mentor Award (2017)</b><br />
 								<i>conferred by the CN Yang Scholars Program, Nanyang Technological University</i></p>
 								<p><b>Nanyang Scholarship under the CN Yang Scholars Program (2016)</b><br />
