--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 								<p><b>Full-time National Servicemen of the Year Award (2016)</b><br />
 								<i>conferred by the Singapore Armed Forces</i></p>
 								<h2 class="minor">Additional Appointments</h2>
-								<p><b>Graduate Student Representative</b> | UAF International Collaboration & Enrollment Task Force (ICE)<br />
+								<p><b>Graduate Student Representative</b><br />
+								UAF International Collaboration & Enrollment Task Force (ICE)<br />
 								<i>Jan 2023 - current</i></p>
 								<p><b>President</b> | Geophysical Institute Graduate Student Association<br />
 								<i>May 2022 - current</i></p>
