--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/darren_bg.JPG" alt="" /></span>
+								<span class="image main"><img src="images/darren_bg.jpg" alt="" /></span>
 								<p>Welcome to my website! My name is Darren Tan (Chinese: 陈培堃) and I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles to try to uncover how seismic and acoustic signals tie in with volcanic unrest. I am particularly interested in using rigorous algorithms (e.g. machine learning) to mine continuous data for previously-undetected signals, in order to construct and present a complete geophysical picture of any eruption-of-interest.</p>
 								<p>As I was born and raised in Singapore, I spent most of my life in a place with no volcanoes and minimal earthquakes. Many people wonder how I ended up studying volcanoes and their associated hazards — honestly, I simply followed my gut after being drawn in by vivid pictures of volcanoes in my middle school geography textbook. Today, I continue to be awed by the scale and unknowns of our geologically-active world, and I look forward to contributing to the wave of 21st century geoscientists.</p>
 								<p>In the long run, I hope to educate populations at risk about volcanic hazards and inspire future volcanologists to be daring thinkers. I hope to better inform people of volcanic hazards and in turn, provide them with the same peace of mind I grew up with in volcano-free Singapore.</p>
