--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<span class="image main"><img src="images/darren_long.jpg" alt="" /></span>
 								<p><b>Email:</b> ptan[a]alaska.edu<br />
 								<b>Github:</b> <a href="https://github.com/darren-tpk">https://github.com/darren-tpk</a></p>
 							</article>
