--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<p>In order to reduce misclassifications, we use a station-based majority voting system to determine the final decided class (Fig. 2). Impulsive signals and non-broadband tremor are prioritized if equal votes are encountered.</p>
 								<span class="image main"><img src="images/station_based_voting.png" alt="" /></span>
 								Fig 2. Comparison between individual model predictions and station-based voting results against a 4 hour spectrogram. Some confusion between the tremor types and between non-tremor signals and explosions is observed. The station-base voting result helps to constrain the sequence of observed signals more reliably.</p>
-								<p>After training the station-specific models on one month of labeled seismic data, we use the models to classify two years of seismic spectrogram slices bounding the 2021-2022 eruption of Pavlof volcano, identify shifts in the unrest regime, and explore correlations with computed data reduction metrics inspired by Melchor et al. (2020).</p>
+								<p>After training the station-specific models on one month of labeled seismic data, we use the models to classify two years of seismic spectrogram slices bounding the 2021-2022 eruption of Pavlof volcano. We identify shifts in the unrest regimes leading up to and during the eruption.</p>
 								<span class="image main"><img src="images/tremor_timeline.png" alt="" /></span>
 								Fig 3. Timeline of tremor classifications. The manually labeled month of data is bounded by a pair of bold, black lines. The general trends in tremor (primarily broadband), align with changes in Alaska Volcano Observatory color codes. Tremor diversity declines as the eruption matures, and the onset of noise in December 2022 coincides with the decline in volcanic activity. </p>
 								<h2 class="minor">Seismic Catalog Enhancement</h2>
@@ -146,9 +146,9 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
 								<p><b>Email:</b> ptan[a]alaska.edu<br />
 								<b>Github:</b> <a href="https://github.com/darren-tpk">https://github.com/darren-tpk</a></p>
+								<span class="image main"><img src="images/darren_long.JPG" alt="" /></span>
 							</article>
 							</article>
 
