--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<p><b>ES2001 - Computational Earth Systems Science</b> | NTU | Fall 2018<br/>
 								Teaching Assistant</p>
 								<h2 class="minor">Publications</h2>
-								<p><i>Hopefully soon!</i></p>
+								<p><b>Tan, D.</b>, Fee D, Hotovec-Ellis AJ, Pesicek JD, Haney MM, Power JA and Girona T (2023) Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Front. Earth Sci. 11:1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
 								<h2 class="minor">Conference Presentations</h2>
 								<p><b>Tan, D.</b>, Fee, D., Girona, T., Haney, M. M., Witsil, A., & Wech, A. (2023). Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning. Abstract 671, Poster P3.211 presented at IAVCEI Scientific Assembly 2023, Rotorua, New Zealand. (poster)</p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
