--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								<i>May 2021 - May 2022</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
 								<p><b>Geophysical station maintenance | Unimak Island/Pavlof Volcano, AK, USA </b><br />
-								Assistant | Jun 2021 - Jul 2021</p>
+								Assistant | Scheduled for Aug 2023</p>
 								<p><b>International Volcanological Field School | Katmai National Park, AK, USA </b><br />
 								Assistant | May 2022 - Jun 2022</p>
 								<p><b>Geophysical station maintenance | Akutan/Unalaska/Unimak Islands, AK, USA </b><br />
