--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
 								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
 								<h2 class="minor">Publications</h2>
-								<p><b>Tan, D.</b>, Fee D, Hotovec-Ellis AJ, Pesicek JD, Haney MM, Power JA and Girona T (2023) Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Front. Earth Sci. 11:1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and Characterization of Seismic and Acoustic Signals at Pavlof Volcano, Alaska, Using Deep Learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
+								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A., & Girona, T. (2023). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Frontiers in Earth Science, 11, 1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
 								<h2 class="minor">Conference Presentations</h2>
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK. (talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA. (talk)</p>
 								<p><b>Tan, D.</b>, Fee, D., Girona, T., Haney, M. M., Witsil, A., & Wech, A. (2023). Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning. Abstract 671, Poster P3.211 presented at IAVCEI Scientific Assembly 2023, Rotorua, New Zealand. (poster)</p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
 								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
@@ -102,6 +105,8 @@
 								<p><b>ES2001 - Computational Earth Systems Science</b> | NTU | Fall 2018<br/>
 								Teaching Assistant</p>
 								<h2 class="minor">Awards</h2>
+								<p><b>Outstanding Student Performance Award (2024)</b><br />
+								<i>conferred by the Geophysical Institute, University of Alaska Fairbanks</i></p>
 								<p><b>Alaska Geological Society Scholarship (2022)</b><br />
 								<i>conferred by the Alaska Geological Society</i></p>
 								<p><b>Oustanding Student Presentation Award (2021)</b><br />
@@ -120,12 +125,12 @@
 								UAF International Collaboration & Enrollment Task Force (ICE)<br />
 								<i>Jan 2023 - Jun 2023</i></p>
 								<p><b>President</b> | Geophysical Institute Graduate Student Association<br />
-								<i>May 2022 - current</i></p>
+								<i>May 2022 - Sept 2023</i></p>
 								<p><b>Committee Member</b> | Geophysical Institute Graduate Student Association<br />
 								<i>May 2021 - May 2022</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
 								<p><b>Geophysical station maintenance | Unimak Island/Pavlof Volcano, AK, USA </b><br />
-								Assistant | Scheduled for Aug 2023</p>
+								Assistant | Aug 2023</p>
 								<p><b>International Volcanological Field School | Katmai National Park, AK, USA </b><br />
 								Assistant | May 2022 - Jun 2022</p>
 								<p><b>Geophysical station maintenance | Akutan/Unalaska/Unimak Islands, AK, USA </b><br />
@@ -138,10 +143,10 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/darren_bg.jpg" alt="" /></span>
-								<p>Welcome to my website! My name is Darren Tan (Chinese: 陈培堃) and I am a Geophysics PhD student at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles to try to uncover how seismic and acoustic signals tie in with volcanic unrest. I am particularly interested in using rigorous algorithms (e.g. machine learning) to mine continuous data for previously-undetected signals, in order to construct and present a complete geophysical picture of any eruption-of-interest.</p>
+								<p>Welcome to my website! My name is Darren Tan (Chinese: 陈培堃) and I am a Geophysics PhD candidate at UAF. My work is focused on volcano seismology and infrasound, where I look at wiggles to try to uncover how seismic and acoustic signals tie in with volcanic unrest. I am particularly interested in using rigorous algorithms (e.g. machine learning) to mine continuous data for previously-undetected signals, in order to construct and present a complete geophysical picture of any eruption-of-interest.</p>
 								<p>As I was born and raised in Singapore, I spent most of my life in a place with no volcanoes and minimal earthquakes. Many people wonder how I ended up studying volcanoes and their associated hazards — honestly, I simply followed my gut after being drawn in by vivid pictures of volcanoes in my middle school geography textbook. Today, I continue to be awed by the scale and unknowns of our geologically-active world, and I look forward to contributing to the wave of 21st century geoscientists.</p>
 								<p>In the long run, I hope to educate populations at risk about volcanic hazards and inspire future volcanologists to be daring thinkers. I hope to better inform people of volcanic hazards and in turn, provide them with the same peace of mind I grew up with in volcano-free Singapore.</p>
-								<p>Outside of work, I am an avid hip-hop dancer for 10 years and running. I enjoy listening to fresh tracks and exploring movement to different rhythms and beats. I’ve taught dance and performed shows back home in Singapore, and I am trying to do the same here in Fairbanks, Alaska. At the moment I’m still too shy to share any videos on this platform, though. But I promise I’m not too shabby. Please feel free to call me out and maybe one day we can have a dance battle on a volcano of your choice.</p>
+								<p>Outside of work, I am an avid hip-hop dancer for over 12 years! I enjoy listening to fresh tracks and exploring movement to different rhythms and beats. I’ve taught dance and performed shows in both Singapore and Fairbanks, Alaska. At the moment I’m still too shy to share any videos on this platform, but I promise I’m not too shabby. Feel free to call me out and perhaps one day we can have a dance battle on a volcano of your choice.</p>
 								
 							</article>
 
