--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Darren Tan</h1>
-								<p>I am a PhD student working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
+								<p>I am a PhD candidate working on volcano seismology and infrasound at the <a href="https://www.uaf.edu/uaf/">University of Alaska Fairbanks</a>.<br />
 								I am affiliated with the <a href="https://www.gi.alaska.edu/">Geophysical Institute</a> and the <a href="https://avo.alaska.edu/">Alaska Volcano Observatory</a>.<br />
 								My PhD research contributes toward the larger <a href="https://sites.google.com/alaska.edu/preeventseruptionforecasting/PREEVENTS">NSF-PREEVENTS Eruption Forecasting project</a>.</p>
 							</div>
