--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
 								<h2 class="minor">Publications</h2>
-								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and Characterization of Seismic and Acoustic Signals at Pavlof Volcano, Alaska, Using Deep Learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and characterization of seismic and acoustic signals at Pavlof Volcano, Alaska, using deep learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A., & Girona, T. (2023). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Frontiers in Earth Science, 11, 1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
+								<p>Grapenthin, R., Cheng, Y., Angarita, M., <b>Tan, D.</b>, Meyer, F. J., Fee, D., & Wech, A. (2022). Return from dormancy: rapid inflation and seismic unrest driven by transcrustal magma transfer at Mt. Edgecumbe (L’úx Shaa) Volcano, Alaska. Geophysical Research Letters, 49(20), e2022GL099464. <a href="https://doi.org/10.1029/2022GL099464">doi: 10.1029/2022GL099464</a></p> 
 								<h2 class="minor">Conference Presentations</h2>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK. (talk)</p>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., & Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA. (talk)</p>
@@ -109,7 +110,7 @@
 								<i>conferred by the Geophysical Institute, University of Alaska Fairbanks</i></p>
 								<p><b>Alaska Geological Society Scholarship (2022)</b><br />
 								<i>conferred by the Alaska Geological Society</i></p>
-								<p><b>Oustanding Student Presentation Award (2021)</b><br />
+								<p><b>Outstanding Student Presentation Award (2021)</b><br />
 								<i>conferred by the 2021 AGU Fall Meeting (Volcanology, Geochemistry and Petrology Section)</i></p>
 								<p><b>Undergraduate Research Experience Residential Mentor Award (2017)</b><br />
 								<i>conferred by the CN Yang Scholars Program, Nanyang Technological University</i></p>
@@ -117,7 +118,12 @@
 								<i>conferred by Nanyang Technological University</i></p>
 								<p><b>Full-time National Servicemen of the Year Award (2016)</b><br />
 								<i>conferred by the Singapore Armed Forces</i></p>
-								<h2 class="minor">Additional Appointments</h2>
+								<h2 class="minor">Service</h2>
+								<p><b>Academic Peer Reviewer</b><br />
+								Science Advances, JVGR, GRL, Frontiers in Earth Sciences<br /></p>
+								<p><b>Session Convener</b><br />
+								2023 AGU Fall Meeting, Session V11D<br />
+								<i>Dec 2023</i></p>
 								<p><b>Graduate Student Representative</b><br />
 								UAF R1 Research Steering Committee<br />
 								<i>Jul 2023 - current</i></p>
@@ -129,11 +135,11 @@
 								<p><b>Committee Member</b> | Geophysical Institute Graduate Student Association<br />
 								<i>May 2021 - May 2022</i></p>
 								<h2 class="minor">Fieldwork Experience</h2>
-								<p><b>Geophysical station maintenance | Unimak Island/Pavlof Volcano, AK, USA </b><br />
+								<p><b>Geophysical Station Maintenance | Unimak Island/Pavlof Volcano, AK, USA </b><br />
 								Assistant | Aug 2023</p>
 								<p><b>International Volcanological Field School | Katmai National Park, AK, USA </b><br />
 								Assistant | May 2022 - Jun 2022</p>
-								<p><b>Geophysical station maintenance | Akutan/Unalaska/Unimak Islands, AK, USA </b><br />
+								<p><b>Geophysical Station Maintenance | Akutan/Unalaska/Unimak Islands, AK, USA </b><br />
 								Assistant | Jun 2021 - Jul 2021</p>
 								<p><b>Geological Mapping | Cerro Gordo/Mono Lake/Panum Crater, CA, USA </b><br />
 								Student | May 2019 - Jun 2019</p>
