--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 								<p>The good performance demonstrated by the plots above encouraged us to use the models to classify more than two years of spectrogram slices bounding the 2021-2022 eruption of Pavlof volcano. We identify shifts in the unrest regimes leading up to and during the eruption.</p>
 								<span class="image main"><img src="images/fig8_multidisciplinary_timeline.png" alt="" /></span>
 								Fig 4. Comparison between AVO color codes, spectrograms, CNN-derived timelines and selected multidisciplinary metrics from January 2021 to March 2023. The selected metrics are reduced displacement (DR), SO2 emission rate, radiative power and explosion times derived from Reverse Time Migration (RTM). Seismic tremor diversity declines as the eruption matures; broadband tremor dominates the sequence although some fluctuations in amplitudes are noted. Infrasound tremor is observed sporadically. CNN and RTM explosion times generally agree well.</p>
+								<p>For more information, refer to our published manuscript at <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p>
 								<h2 class="minor">Seismic Catalog Enhancement</h2>
 								<p>Volcanic earthquake catalogs are an essential data product used to interpret subsurface volcanic activity and forecast eruptions. Advances in detection techniques (e.g. matched filtering, machine learning) and relative relocation tools have improved catalog completeness and refined event locations. However, due to complexities in operationalizing, automating, and calibrating such techniques, volcano observatories have yet to incorporate them into their operational workflows. In an effort to streamline the integration of catalog-enhancing tools at Alaska Volcano Observatory (AVO), me and my collaborators have combined three popular open-source algorithms: REDPy (Hotovec-Ellis & Jeffries, 2016), EQcorrscan (Chamberlain et al., 2018) HypoDD (Waldhauser & Ellsworth, 2000), and GrowClust (Trugman & Shearer, 2017) into a single workflow (Fig 5). We find that our workflow significantly increases the number of detected events and event clusters at our test volcanoes, and that it provides insights into the temporal seismic trends related to volcanic activity.</a>.</p>
 								<span class="image main"><img src="images/workflow.png" alt="" /></span>
@@ -84,18 +85,21 @@
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<h2 class="minor">Education</h2>
-								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics </p>
-								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science</p>
+								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics specializing in volcano seismology, infrasound and machine learning</p>
+								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
+								<p></p>
 								<h2 class="minor">Publications</h2>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and characterization of seismic and acoustic signals at Pavlof Volcano, Alaska, using deep learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
+								<p>Orr, T.R., Dietterich, H.R., Fee D., Girona, T., Grapenthin, R., Haney, M.M., Loewen, M.W., Lyons, J.J., Power, J.A., Schwaiger, H.F., Schneider, D.J., <b>Tan, D.</b>, Toney, L., Wasser, V.K., Waythomas, C.F., 2024, 2021 Volcanic activity in Alaska and the Commonwealth of the Northern Mariana Islands—Summary of events and response of the Alaska Volcano Observatory: U.S. Geological Survey Scientific Investigations Report 2024–5014, 64 p. <a href="https://doi.org/10.3133/sir20245014">doi: 10.3133/sir20245014</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A., & Girona, T. (2023). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Frontiers in Earth Science, 11, 1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
 								<p>Grapenthin, R., Cheng, Y., Angarita, M., <b>Tan, D.</b>, Meyer, F. J., Fee, D., & Wech, A. (2022). Return from dormancy: rapid inflation and seismic unrest driven by transcrustal magma transfer at Mt. Edgecumbe (L’úx Shaa) Volcano, Alaska. Geophysical Research Letters, 49(20), e2022GL099464. <a href="https://doi.org/10.1029/2022GL099464">doi: 10.1029/2022GL099464</a></p> 
 								<h2 class="minor">Conference Presentations</h2>
-								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK. (talk)</p>
-								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., & Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA. (talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Burgos, V., Lopez, T., Haney, M., Waythomas, C., McNutt, S., Girona, T., Izbekov, P., Larsen, J., Wasser, V., Shreve, T., Moshrefzadeh, J., Grapenthin, R., Angarita, M. & Saunders-Shultz, P. (2024). A multidisciplinary investigation of vent-specific unrest at Pavlof Volcano, Alaska (2004-2024). Abstract V51A-01, presented at 2024 AGU Fall Meeting, Washington D.C., USA. (talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK, USA. (talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., & Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA, USA. (talk)</p>
 								<p><b>Tan, D.</b>, Fee, D., Girona, T., Haney, M. M., Witsil, A., & Wech, A. (2023). Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning. Abstract 671, Poster P3.211 presented at IAVCEI Scientific Assembly 2023, Rotorua, New Zealand. (poster)</p>
-								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA. (poster)</p>
-								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA. (poster)</p>
+								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA, USA. (poster)</p>
+								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA, USA. (poster)</p>
 								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
 								<h2 class="minor">Undergraduate Research Projects</h2>
 								<p><b>Balloon-glider drone hybrid for volcano surveillance</b> | Advised by Benoit Taisne at Earth Observatory of Singapore | May 2018 - Aug 2018</p>
@@ -120,7 +124,7 @@
 								<i>conferred by the Singapore Armed Forces</i></p>
 								<h2 class="minor">Service</h2>
 								<p><b>Academic Peer Reviewer</b><br />
-								Science Advances, JVGR, GRL, Frontiers in Earth Sciences<br /></p>
+								Science Advances, JGR, JVGR, GRL, Frontiers in Earth Sciences<br /></p>
 								<p><b>Session Convener</b><br />
 								2023 AGU Fall Meeting, Session V11D<br />
 								<i>Dec 2023</i></p>
