--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<h2 class="minor">Volcanic Tremor Detection using Machine Learning</h2>
-								<p>Volcanic tremor is a semi-continuous seismic and/or acoustic signal that is challenging to detect reliably due to its highly variable amplitudes, durations and spectral features. Machine learning offers a fast, robust and automated method to detect and characterize tremor in high temporal resolution for volcano monitoring and research purposes. We construct a labeled dataset and train a pair of station-generic Convolutional Neural Networks (one for seismic, one for infrasound) to identify different types of tremor and impulsive signals across the 2021-2022 eruption of Pavlof volcano, Alaska.</a>.</p>
+								<p>Volcanic tremor is a semi-continuous seismic and/or acoustic signal that is challenging to detect reliably due to its highly variable amplitudes, durations and spectral features. Machine learning offers a fast, robust and automated method to detect and characterize tremor in high temporal resolution for volcano monitoring and research purposes. We construct a labeled dataset and train a pair of station-generic Convolutional Neural Networks (one for seismic, one for infrasound) to identify different types of tremor and impulsive signals across the 2021-2022 eruption of Pavlof volcano, Alaska.</a></p>
 								<span class="image main"><img src="images/tremor_classes.png" alt="" /></span>
 								Fig 1. Selected classes for labeling for both data types, separated by Label Studio screenshots. Classes are determined from the variety of signals observed during the 2021-2022 eruption. Examples above are obtained from July-August 2021.</p>
 								<p>After training the station-generic models on two month of labeled spectrograms each, we use them to classify short sequences of seismic and acoustic tremor, shown below. In order to reduce misclassifications, we use a station-based majority voting system to determine the final decided class (Fig. 2 & 3). Tremor classes are prioritized over impulsive signals if equal votes are encountered.</p>
@@ -88,18 +88,18 @@
 								<p><b>University of Alaska Fairbanks (UAF)</b> | Fairbanks, AK, USA | August 2020 - current<br>PhD in Geophysics specializing in volcano seismology, infrasound and machine learning</p>
 								<p><b>Nanyang Technological University (NTU)</b> | Singapore | August 2016 - May 2020<br>BSc in Environmental Earth Systems Science; First Class Honors; GPA 4.68 / 5.00</p>
 								<p></p>
-								<h2 class="minor">Publications</h2>
+								<h2 class="minor">Published Manuscripts & Reports</h2>
 								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024). Detection and characterization of seismic and acoustic signals at Pavlof Volcano, Alaska, using deep learning. Journal of Geophysical Research: Solid Earth, 129(6), e2024JB029194. <a href="https://doi.org/10.1029/2024JB029194">doi: 10.1029/2024JB029194</a></p> 
 								<p>Orr, T.R., Dietterich, H.R., Fee D., Girona, T., Grapenthin, R., Haney, M.M., Loewen, M.W., Lyons, J.J., Power, J.A., Schwaiger, H.F., Schneider, D.J., <b>Tan, D.</b>, Toney, L., Wasser, V.K., Waythomas, C.F., 2024, 2021 Volcanic activity in Alaska and the Commonwealth of the Northern Mariana Islands—Summary of events and response of the Alaska Volcano Observatory: U.S. Geological Survey Scientific Investigations Report 2024–5014, 64 p. <a href="https://doi.org/10.3133/sir20245014">doi: 10.3133/sir20245014</a></p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A., & Girona, T. (2023). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Frontiers in Earth Science, 11, 1158442. <a href="https://doi.org/10.3389/feart.2023.1158442">doi: 10.3389/feart.2023.1158442</a></p> 
 								<p>Grapenthin, R., Cheng, Y., Angarita, M., <b>Tan, D.</b>, Meyer, F. J., Fee, D., & Wech, A. (2022). Return from dormancy: rapid inflation and seismic unrest driven by transcrustal magma transfer at Mt. Edgecumbe (L’úx Shaa) Volcano, Alaska. Geophysical Research Letters, 49(20), e2022GL099464. <a href="https://doi.org/10.1029/2022GL099464">doi: 10.1029/2022GL099464</a></p> 
 								<h2 class="minor">Conference Presentations</h2>
-								<p><b>Tan, D.</b>, Fee, D., Burgos, V., Lopez, T., Haney, M., Waythomas, C., McNutt, S., Girona, T., Izbekov, P., Larsen, J., Wasser, V., Shreve, T., Moshrefzadeh, J., Grapenthin, R., Angarita, M. & Saunders-Shultz, P. (2024). A multidisciplinary investigation of vent-specific unrest at Pavlof Volcano, Alaska (2004-2024). Abstract V51A-01, presented at 2024 AGU Fall Meeting, Washington D.C., USA. (talk)</p>
-								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK, USA. (talk)</p>
-								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., & Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA, USA. (talk)</p>
-								<p><b>Tan, D.</b>, Fee, D., Girona, T., Haney, M. M., Witsil, A., & Wech, A. (2023). Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning. Abstract 671, Poster P3.211 presented at IAVCEI Scientific Assembly 2023, Rotorua, New Zealand. (poster)</p>
-								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA, USA. (poster)</p>
-								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA, USA. (poster)</p>
+								<p><b>Tan, D.</b>, Fee, D., Burgos, V., Lopez, T., Haney, M., Waythomas, C., McNutt, S., Girona, T., Izbekov, P., Larsen, J., Wasser, V., Shreve, T., Moshrefzadeh, J., Grapenthin, R., Angarita, M. & Saunders-Shultz, P. (2024). A multidisciplinary investigation of vent-specific unrest at Pavlof Volcano, Alaska (2004-2024). Abstract V51A-01, presented at 2024 AGU Fall Meeting, Washington D.C., USA. (Talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., Wech, A., Waythomas, C., & Lopez, T. (2024).  Investigation of tremor and explosion sequences from Pavlof Volcano, Alaska using deep learning. Abstract presented at 2024 SSA Annual Meeting, Anchorage, AK, USA. (Invited Talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Witsil, A., Girona, T., Haney, M., & Wech, A. (2023).  Volcano seismic and acoustic tremor regimes at Pavlof Volcano, Alaska revealed by machine learning. Abstract V14B-01, presented at 2023 AGU Fall Meeting, San Francisco, CA, USA. (Talk)</p>
+								<p><b>Tan, D.</b>, Fee, D., Girona, T., Haney, M. M., Witsil, A., & Wech, A. (2023). Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning. Abstract 671, Poster P3.211 presented at IAVCEI Scientific Assembly 2023, Rotorua, New Zealand. (Poster)</p>
+								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA, USA. (Poster)</p>
+								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA, USA. (Poster)</p>
 								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
 								<h2 class="minor">Undergraduate Research Projects</h2>
 								<p><b>Balloon-glider drone hybrid for volcano surveillance</b> | Advised by Benoit Taisne at Earth Observatory of Singapore | May 2018 - Aug 2018</p>
@@ -122,12 +122,13 @@
 								<i>conferred by Nanyang Technological University</i></p>
 								<p><b>Full-time National Servicemen of the Year Award (2016)</b><br />
 								<i>conferred by the Singapore Armed Forces</i></p>
-								<h2 class="minor">Service</h2>
+								<h2 class="minor">Professional Service</h2>
 								<p><b>Academic Peer Reviewer</b><br />
 								Science Advances, JGR, JVGR, GRL, Frontiers in Earth Sciences<br /></p>
 								<p><b>Session Convener</b><br />
 								2023 AGU Fall Meeting, Session V11D<br />
 								<i>Dec 2023</i></p>
+								<h2 class="minor">University Service</h2>
 								<p><b>Graduate Student Representative</b><br />
 								UAF R1 Research Steering Committee<br />
 								<i>Jul 2023 - current</i></p>
