--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<p><b>Tan, D.</b>, Fee, D., Girona, T., Haney, M. M., Witsil, A., & Wech, A. (2023). Detection and characterization of seismic and acoustic tremor at volcanoes using machine learning. Abstract 671, Poster P3.211 presented at IAVCEI Scientific Assembly 2023, Rotorua, New Zealand. (Poster)</p>
 								<p><b>Tan, D.</b>, Fee, D., Hotovec-Ellis, A. J., Pesicek, J. D., Haney, M. M., Power, J. A. & Girona, T. (2021). Volcanic earthquake catalog enhancement using integrated detection, matched-filtering, and relocation tools. Abstract V25D-0134 presented at 2021 AGU Fall Meeting, New Orleans, LA, USA. (Poster)</p>
 								<p><b>Tan, D.</b>, Wellik, J., Pesicek, J. D., Ogburn, S. E., & Thelen, W. A. (2019). Exploring the relationship between repose time and cumulative moment magnitude for volcanoes worldwide. Abstract V51K-0241 presented at 2019 AGU Fall Meeting, San Francisco, CA, USA. (Poster)</p>
-								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (poster)</p>
+								<p><b>Tan, D.</b>, Manta, F., & Taisne, B. (2017). Mining web-camera archives for volcanic deformation signals. Abstract SE10-A009 presented at AOGS Fall Meeting 2017, Singapore, Singapore (Poster)</p>
 								<h2 class="minor">Undergraduate Research Projects</h2>
 								<p><b>Balloon-glider drone hybrid for volcano surveillance</b> | Advised by Benoit Taisne at Earth Observatory of Singapore | May 2018 - Aug 2018</p>
 								<p><b>Rate and characteristics of sprites around Singapore through automated event detection</b> | Advised by Benoit Taisne and Anna Perttu at Earth Observatory of Singapore | Aug 2017 - Apr 2018</p>
